[package]
name = "aws-athena-parser"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Athena parser to convert Athena ResultSet into user defined Structs"
repository = "https://github.com/Surphix/aws_athena_parser"
keywords = ["database", "aws", "athena"]
categories = ["database"]
authors = ["Eric Howard <erichoward@live.ca>"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
from-athena-derive = { version = "0.1.0", path = "../from-athena-derive" }
aws-sdk-athena = { version = "1.19.0" }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0.82" }
