[package]
name = "from-athena-derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Derive macro for FromAthena trait to convert Athena ResultSet into user defined Structs"
repository = "https://github.com/Surphix/aws_athena_parser"
keywords = ["database", "aws", "athena"]
categories = ["database"]
authors = ["Eric Howard <erichoward@live.ca>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "2.0.58"
quote = "1.0.35"
aws-sdk-athena = "1.19.0"
anyhow = "1.0.82"
